@@ -1,5 +1,7 @@
 import unittest
 
+_marker = object()
+
 class PendingQueueTests(unittest.TestCase):
 
     _tempdir = None
@@ -13,8 +15,21 @@ class PendingQueueTests(unittest.TestCase):
         from repoze.mailin.pending import PendingQueue
         return PendingQueue
 
-    def _makeOne(self, path=None, dbfile=':memory:'):
-        return self._getTargetClass()(path, dbfile)
+    def _makeOne(self,
+                 path=None,
+                 dbfile=':memory:',
+                 isolation_level=_marker,
+                 logger=_marker,
+                ):
+        if logger is _marker:
+            if isolation_level is _marker:
+                return self._getTargetClass()(path, dbfile)
+            return self._getTargetClass()(path, dbfile, isolation_level)
+
+        if isolation_level is _marker:
+            return self._getTargetClass()(path, dbfile, logger=logger)
+
+        return self._getTargetClass()(path, dbfile, isolation_level, logger)
 
     def test_class_conforms_to_IPendingQueue(self):
         from zope.interface.verify import verifyClass
@@ -27,30 +42,48 @@ class PendingQueueTests(unittest.TestCase):
         verifyObject(IPendingQueue, self._makeOne())
 
     def test_ctor_defaults(self):
-        queue = self._getTargetClass()()
-        self.assertEqual(queue.path, None)
-        self.assertEqual(queue.sql.isolation_level, None) # autocommit
+        pq = self._getTargetClass()()
+        self.assertEqual(pq.path, None)
+        self.assertEqual(pq.sql.isolation_level, None) # autocommit
+        self.assertEqual(pq.logger, None)
 
     def test_ctor_w_path_wo_dbfile(self):
         import os
         import tempfile
         tempdir = self._tempdir = tempfile.mkdtemp()
-        queue = self._makeOne(tempdir, None)
-        self.assertEqual(queue.path, tempdir)
+        pq = self._makeOne(tempdir, None)
+        self.assertEqual(pq.path, tempdir)
         self.failUnless(os.path.isfile(os.path.join(tempdir, 'pending.db')))
 
     def test_ctor_w_isolation_level(self):
-        queue = self._makeOne(isolation_level='DEFERRED')
-        self.assertEqual(queue.path, None)
-        self.assertEqual(queue.sql.isolation_level, 'DEFERRED')
+        pq = self._makeOne(isolation_level='DEFERRED')
+        self.assertEqual(pq.sql.isolation_level, 'DEFERRED')
+
+    def test_ctor_w_invalid_logger(self):
+        logger = object()
+        self.assertRaises(ValueError, self._makeOne, logger=logger)
+
+    def test_ctor_w_logger(self):
+        logger = DummyLogger()
+        pq = self._makeOne(logger=logger)
+        self.failUnless(pq.logger is logger)
 
     def test___nonzero___empty(self):
         pq = self._makeOne()
         self.failIf(pq)
 
-    def test_pop_empty_returns_None(self):
+    def test_pop_empty_returns_empty(self):
         pq = self._makeOne()
         self.assertEqual(list(pq.pop()), [])
+
+    def test_pop_empty_w_logger(self):
+        logger = DummyLogger()
+        pq = self._makeOne(logger=logger)
+        self.failUnless(pq.logger is logger)
+        popped = list(pq.pop())
+        self.assertEqual(len(logger._logged), 1)
+        self.assertEqual(logger._logged[0],
+                         (('Queue underflow: requested 1, popped 0',), {}))
 
     def test_remove_nonesuch_raises_KeyError(self):
         pq = self._makeOne()
@@ -85,9 +118,12 @@ class PendingQueueTests(unittest.TestCase):
         self.failIf(pq)
 
     def test_pop_empty_with_many(self):
-        pq = self._makeOne()
+        logger = DummyLogger()
+        pq = self._makeOne(logger=logger)
         found = list(pq.pop(2))
         self.assertEqual(len(found), 0)
+        self.assertEqual(logger._logged[0],
+                         (('Queue underflow: requested 2, popped 0',), {}))
 
     def test_pop_not_empty_with_many(self):
         MESSAGE_IDS = ['<abcdef@example.com>',
@@ -109,7 +145,8 @@ class PendingQueueTests(unittest.TestCase):
                        '<defghi@example.com>',
                        '<ghijkl@example.com>',
                       ]
-        pq = self._makeOne()
+        logger = DummyLogger()
+        pq = self._makeOne(logger=logger)
         for message_id in MESSAGE_IDS:
             pq.push(message_id)
         found = list(pq.pop(5))
@@ -119,6 +156,8 @@ class PendingQueueTests(unittest.TestCase):
         self.assertEqual(found[2], MESSAGE_IDS[2])
         residue = list(pq)
         self.assertEqual(len(residue), 0)
+        self.assertEqual(logger._logged[0],
+                         (('Queue underflow: requested 5, popped 3',), {}))
 
     def test_close_on_evict(self):
         pq = self._makeOne()
@@ -131,3 +170,10 @@ class DummySql(object):
 
     def close(self):
         self.closed = True
+
+class DummyLogger:
+    def __init__(self):
+        self._logged = []
+
+    def log(self, *args, **kw):
+        self._logged.append((args, kw))
